# PatientSystem

./: .deepsource.toml  .env.example  .env.production.example  .gitignore  ACTION_PLAN.md  AGENTS.md  API_CHANGELOG.md  ARCHITECTURE.md  CLAUDE.md  CODE_IMPROVEMENTS_SUMMARY.md  Clinical_AI_Implementation_Plan.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  INSTALLATION_COMPLETE.md  Implementation_plan.md  NAMING_FIXES.md  QUICK_WINS.md  README.md  SCRIPTS_UPDATE.md  SECURITY_AUDIT.md  TROUBLESHOOTING.md  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  table_names.csv  test_db_connection.py
.github/: copilot-instructions.md
.serena/: project.yml
claudedocs/: specification_review_report.md
config/: ai_models.yaml.example  requirements.txt
deployment/: Dockerfile  docker-compose.override.yml  docker-compose.yml
docs/: API.md  CONFIGURATION.md  IMPLEMENTATION_PLAN.md  PROJECT_DOCUMENTATION.md  critical_tables_schema.txt
environments/: .env.development  .env.production
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
monitoring/: prometheus.yml
nginx/: nginx.conf
openspec/: project.md
scripts/: backup-database.sh  deploy.sh  health-check.sh  init-database.sql  install-ollama-models.sh  install.bat  install.sh  migrate_icd_codes.py  quickstart.bat  quickstart.sh  run_cli.bat  run_desktop.bat  run_tests.bat  run_web.bat  setup-frontend.bat  setup-frontend.sh  validate-deployment.sh
tests/: conftest.py
(+118 files in other folders)
